--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
   <footer class="page-footer unique-color-dark">
 
     <!-- Social buttons -->
-    <div class="primary-color">
+    <div class="top-nav-collapse">
       <div class="container">
         <!--Grid row-->
         <div class="row py-4 d-flex align-items-center">
@@ -470,8 +470,6 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
-  <!-- 导入 Sogou Map API -->
-  <script type="text/javascript" src="https://api.go2map.com/maps/js/api_v2.5.1.js"></script>
   <!-- Your custom scripts (optional) -->
   <script type="text/javascript">
     // Carousel options
@@ -481,22 +479,6 @@
       wrap: false, // 是否循环轮播, 默认循环
     });
     
-
-    /** 定义函数, 加载指定坐标的地图 */
-    function showMap() {
-      var myLatlng = new sogou.maps.LatLng(29.4902, 106.5714);
-      var myOptions = {
-        zoom: 13,
-        center: myLatlng,
-        mapTypeId: sogou.maps.MapTypeId.ROADMAP
-      };
-      map = new sogou.maps.Map(document.getElementById("map-container"), myOptions);
-      marker = new sogou.maps.Marker({
-        position: myLatlng,
-        map: map,
-        title: "重庆交通大学"
-      });
-    }
     // 设置事件侦听器, 当窗口加载时调用 showMap 函数
     sogou.maps.event.addDomListener(window, 'load', showMap);
   </script>
