--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
         </div>
         <!--Grid row-->
 
+        <video controls autobuffer="true" width="100%" poster="img/index-3.jpg">
+          <source src="RED2.mp4">
+          不支持的浏览器
+      </video>
       </section>
       <!--Section: Best Features-->
 
@@ -478,9 +482,6 @@
       pause: false, // 鼠标移上后是否暂停, 默认暂停
       wrap: false, // 是否循环轮播, 默认循环
     });
-    
-    // 设置事件侦听器, 当窗口加载时调用 showMap 函数
-    sogou.maps.event.addDomListener(window, 'load', showMap);
   </script>
   <script type="text/javascript">
     // MDB Lightbox Init
